# darrenhoyland_info_stack

./: .gitignore  README.md  docker-compose.yml  lightsail-compose.sh
api/: .gitignore  App.py  Dockerfile  pyproject.toml  requirements.txt  run_dev.sh  ubuntu-aws-setup.sh
api/api/: App.py
api/api/data/: resume-data.json
