[tool.poetry]
name = "api"
version = "0.0.1"
description = ""
authors = ["Darren Hoyland <darren@hoyland.me>"]

[tool.poetry.dependencies]
python = "^3.7.5"
Flask = "0.12.2"
gunicorn = "19.9.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
